# rapidsr

./: setup.cfg
rapidsr/: _internal.py  _models.py  algorithms.py  conversion.py  log.py  loss.py  stop.py
rapidsr/scripts/: check_alignment.py  prepare_multi.py  train.py
rapidsr/test/: test_algorithms.py  test_integration.py  test_loss.py  test_stop.py
