[metadata]
name = rapidsr
author = khrynczenko
author_email = jeniopy@gmail.com
version = 0.1.0
license_file = LICENSE
description = Rapid super-resolution experiments.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/khrynczenko/rapidsr
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering


[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy>=1.1.0, <2.0.0
    numpy>=1.15.4, <2.0.0
    compimg>=0.2.0, <0.3.0
    opencv-python>=4.1.0, <5.0.0


[options.packages.find]
exclude =
    rapidsr.tests
